feat: SB40-188 ujednolicenie integracji LLM do jednego tagu gpt